@@ -2348,16 +2348,17 @@ bool Bot::IsValidName() {
 	return Result;
 }
 
-bool Bot::IsBotNameAvailable(std::string* errorMessage) {
-	bool Result = false;
+bool Bot::IsBotNameAvailable(char *botName, std::string* errorMessage) {
+	bool Result1 = false;
+	bool Result2 = false;
 
-	if(this->GetCleanName()) {
+	if(botName !="") {
 		char* Query = 0;
 		char TempErrorMessageBuffer[MYSQL_ERRMSG_SIZE];
 		MYSQL_RES* DatasetResult;
 		MYSQL_ROW DataRow;
 
-		if(!database.RunQuery(Query, MakeAnyLenString(&Query, "SELECT COUNT(id) FROM vwBotCharacterMobs WHERE name LIKE '%s'", this->GetCleanName()), TempErrorMessageBuffer, &DatasetResult)) {
+		if(!database.RunQuery(Query, MakeAnyLenString(&Query, "SELECT COUNT(id) FROM vwBotCharacterMobs WHERE name LIKE '%s'", botName), TempErrorMessageBuffer, &DatasetResult)) {
 			*errorMessage = std::string(TempErrorMessageBuffer);
 		}
 		else {
@@ -2369,15 +2370,34 @@ bool Bot::IsBotNameAvailable(std::string* errorMessage) {
 			}
 
 			if(ExistingNameCount == 0)
-				Result = true;
+				Result1 = true;
 
 			mysql_free_result(DatasetResult);
-		}
 
+			if(!database.RunQuery(Query, MakeAnyLenString(&Query, "SELECT COUNT(id) FROM character_ WHERE name LIKE '%s'", botName), TempErrorMessageBuffer, &DatasetResult)) {
+				*errorMessage = std::string(TempErrorMessageBuffer);
+			} else {
+				uint32 ExistingNameCount = 0;
+
+				while(DataRow = mysql_fetch_row(DatasetResult)) {
+					ExistingNameCount = atoi(DataRow[0]);
+					break;
+				}
+
+				if(ExistingNameCount == 0)
+					Result2 = true;
+
+				mysql_free_result(DatasetResult);
+
+			}
+		}
 		safe_delete(Query);
 	}
 
-	return Result;
+	if(Result1 && Result2)
+		return true;
+	else
+		return false;
 }
 
 bool Bot::Save() {
@@ -3143,7 +3163,7 @@ void Bot::SpellProcess()
 void Bot::BotMeditate(bool isSitting) {
 	if(isSitting) {
 		// If the bot is a caster has less than 99% mana while its not engaged, he needs to sit to meditate
-		if(GetManaRatio() < 99.0f)
+		if(GetManaRatio() < 99.0f || GetHPRatio() < 99.0f)
 		{
 			if(!IsSitting())
 				Sit();
@@ -11867,6 +11887,11 @@ void Bot::ProcessBotCommands(Client *c, const Seperator *sep) {
 		if(!strcasecmp(sep->arg[5], "female"))
 			gender = 1;
 
+		if(!IsBotNameAvailable(sep->arg[2],&TempErrorMessage)) {
+			c->Message(0, "The name %s is already being used. Please choose a different name.", sep->arg[2]);
+			return;
+		}
+
 		NPCType DefaultNPCTypeStruct = CreateDefaultNPCTypeStructForBot(std::string(sep->arg[2]), std::string(), c->GetLevel(), atoi(sep->arg[4]), atoi(sep->arg[3]), gender);
 		Bot* NewBot = new Bot(DefaultNPCTypeStruct, c);
 
@@ -11881,10 +11906,6 @@ void Bot::ProcessBotCommands(Client *c, const Seperator *sep) {
 				return;
 			}
 
-			if(!NewBot->IsBotNameAvailable(&TempErrorMessage)) {
-				c->Message(0, "The name %s is already being used. Please choose a different name.", NewBot->GetCleanName());
-				return;
-			}
 
 			if(!TempErrorMessage.empty()) {
 				c->Message(13, "Database Error: %s", TempErrorMessage.c_str());
